--- a/src/makefile
+++ b/src/makefile
@@ -1,11 +1,11 @@
-version = -std=c++11
+main:main.o DateFrame.o
+	g++ -std=c++11 -pg main.o DateFrame.o -o main
 
-ALL:main
-
-main:main.o
-	g++ main.o -o main
 main.o:main.cpp
-	g++ $(version) -c main.cpp -o main.o
+	g++ -std=c++11 -c main.cpp -o main.o
+
+DateFrame.o:DateFrame.cpp
+	g++ -std=c++11 -c DateFrame.cpp -o DateFrame.o
 
 clean:
-	-rm -rf main main.o
+	-rm -rf main main.o DateFrame.o ../outPut/*
